--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -15,6 +15,7 @@
 .header h1{
     margin-right: 20vw;
     font-size: 25px;
+    height: 35px;
 }
 div button{
     cursor: pointer;
@@ -36,6 +37,22 @@ div button:hover{
 .humburger{
     display: none;
     cursor: pointer;
+    font-size: 25px;
+}
+.humburger-menu{
+    display: none;
+position: absolute;
+right:0;
+/* display: flex; */
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+
+top:35px;
+width: 30vw;
+height: 30vh;
+color: black;
+background: #ffa8a8;
 }
 @media screen and (max-width :768px) {
     .buttons{
@@ -51,6 +68,9 @@ div button:hover{
     }
     .header h1{
         margin-left: 3vw;
+    }
+    .humburger-menu{
+        display: flex;
     }
     
 }
