--- a/src/styles/MovieSearch.css
+++ b/src/styles/MovieSearch.css
@@ -26,7 +26,7 @@
     border: 1px solid black;
     border-radius: 1%;
    width:30vw;
-   height: 90vh;
+   height: fit-content;
    margin:0.5rem;
    padding: 0.5rem;
    background-color: rgb(227, 231, 255);
