--- a/src/styles/WatchedList.css
+++ b/src/styles/WatchedList.css
@@ -11,3 +11,8 @@
     color: black;
     transform: scale(1.1);
 }
+.watchedList-container{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
