--- a/src/styles/MovieDetails.css
+++ b/src/styles/MovieDetails.css
@@ -29,14 +29,13 @@ gap:0.5rem;
   align-items: center;
   background-color: rgb(227, 231, 255);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 3%;
-  padding: 1rem;
-  
+  border-radius: 2%;
   width: 20vw;
+  height: 40vh;
   
 }
 .similarmovie-img{
-  width: calc(10vw + 25px)
+  width:30%;
 }
 .see{
   cursor: pointer;
@@ -47,8 +46,17 @@ gap:0.5rem;
   border-radius: 1%;
   padding: 10px;
   width: 90vw;
-  
+  background: #d2edfe;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+ 
   margin: 0 auto;
+}
+.moviedetails-details .overview{
+  color: #000;
+  font-size: larger;
+  font-weight: 1000;
 }
 .img{
   width: 50px;
