--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -46,6 +46,7 @@ div .button:hover{
 .humburger-menu{
     display: none;
 position: absolute;
+top:0;
 right:0;
 /* display: flex; */
 flex-direction: column;
@@ -54,7 +55,7 @@ align-items: center;
 z-index: 100;
 top:60px;
 width: 45vw;
-height: 80vh;
+height: 100vh;
 
 background: #032541;
 }
